Hadoop YARN Change Log

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

    YARN-2336. Fair scheduler's REST API returns a missing '[' bracket JSON for
    deep queue tree. (Kenji Kikushima and Akira Ajisaka via ozawa)

  NEW FEATURES

    YARN-2019. Retrospect on decision of making RM crashed if any exception throw
    in ZKRMStateStore. (Jian He via junping_du)

  IMPROVEMENTS

    YARN-1050. Document the Fair Scheduler REST API. (Kenji Kikushima and Roman Shaposhnik via kasha)

    MAPREDUCE-6478. Add an option to skip cleanupJob stage or ignore cleanup
    failure during commitJob. (Junping Du via wangda)

    YARN-3967. Fetch the application report from the AHS if the RM does not know about it.
    (Mit Desai via xgong)

    YARN-3978. Configurably turn off the saving of container info in Generic AHS
    (Eric Payne via jeagles)

    YARN-4145. Make RMHATestBase abstract so its not run when running all
    tests under that namespace (adhoot via rkanter)

    YARN-4761. NMs reconnecting with changed capabilities can lead to wrong cluster
    resource calculations on fair scheduler. (Sangjin Lee via zxu)

    YARN-4132. Separate configs for nodemanager to resourcemanager connection
    timeout and retries (Chang Li via jlowe)

    YARN-4496. Improve HA ResourceManager Failover detection on the client.
    (Jian He via xgong)

    YARN-4655. Log uncaught exceptions/errors in various thread pools in YARN.
    (Sidharta Seethana via vvasudev)

  OPTIMIZATIONS

  BUG FIXES

    YARN-4546. ResourceManager crash due to scheduling opportunity overflow.
    (Jason Lowe via junping_du)

    YARN-4392. ApplicationCreatedEvent event time resets after RM restart/failover.
    (Naganarasimha G R and Xuan Gong via xgong)

    YARN-5353. ResourceManager can leak delegation tokens when they are shared across
    apps. (Jason Lowe via Varun Saxena)

    YARN-5197. RM leaks containers if running container disappears from
    node update. Contributed by Jason Lowe.
